Change oozie to airflow Change code to avoid using depricated api